syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "./;proto";

service User {
  rpc GetUserList(PageInfo) returns (UserListResponse); // 用户列表
  rpc GetUserByMobile(MobileRequest) returns(UserInfoResponse); // 通过mobile查询用户
  rpc GetUserById(IdRequest) returns(UserInfoResponse); // 通过id查询用户
  rpc GetUserByExist(UserLogin) returns(UserInfoResponse); //查询用户是存注册过
  rpc CreateUser(CreateUserInfo) returns(UserInfoResponse); //创建用户
  rpc UpdateUser(UpdateUserInfo) returns(google.protobuf.Empty); //更新用户
  rpc DeleteUser(IdRequest) returns(google.protobuf.Empty); //删除用户
}

//分页信息
message PageInfo {
  uint32 pageIndex = 1;
  uint32 pageSize = 2;
}
//电话请求
message MobileRequest{
  string mobile = 1;
}
//id查询
message  IdRequest {
  string id = 1;
}

message UserLogin {
  string mobile = 1;
  string password = 2;
}

//注册用户
message  CreateUserInfo{
  string mobile = 1;
  string name = 2;
  string password = 3;
  uint64 birthday = 4;
  int32 gender = 5;
  int32 role = 6;
  string id = 7;
}
//更新用户
message UpdateUserInfo{
  string id = 1;
  string mobile = 2;
  string name = 3;
  string password = 4;
  uint64 birthday = 5;
  int32 gender = 6;
  int32 role = 7;
}

//返回用户信息
message UserInfoResponse {
  string id = 1;
  string password = 2;
  string mobile = 3;
  uint64 birthday = 4;
  int32 gender = 5;
  int32  role = 6;
  string name = 7;

}

//返回用户列表信息
message UserListResponse {
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}